--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ h1{
     margin-top: 20px;
     font-size: 24px;
     color: #F9FAF8;
+    padding-left: 35px;
 }
 ul{
     list-style: none;
@@ -69,3 +70,50 @@ font-size: large;
 margin-top: 0;
 color: #E5E7EB;
 }   
+.body{
+    background-color:white ;
+}
+h3{
+    font-size: 36px;
+    font-weight: bold;
+    color:#1F2937;
+    text-align: center;
+}
+.body-content{
+    display: flex;
+    justify-content:center ;
+    width: 100%vh;
+    height: 250px;
+    gap: 50px;
+}
+.box{
+outline: 4px solid #3882F6;
+width: 150px;
+height: 150px;
+border-radius: 10px;
+margin-bottom: 10px;
+}
+
+.text{ 
+   color: black;
+    text-align: center;
+}
+
+.qoute{
+    background-color: #E5E7EB;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.qoute-text{
+    font-size: 25px;
+    color: black;
+    font-style: italic;
+    width: 500px;
+}
+span{
+    font-weight: bold;
+    margin-left: 300px;
+    font-size: 20px;
+}
