--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,9 @@
+
+
 body{
     background-color: #1F2937;
     color: white;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 
@@ -116,4 +119,29 @@ span{
     font-weight: bold;
     margin-left: 300px;
     font-size: 20px;
+    margin-top: 10px;
+}
+.call-to-action {
+    background-color: #3882F6;
+    margin: 50px 200px;
+    padding: 10px 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border-color: none;
+    width: fit-content;
+    margin-left: 35%;
+}
+
+h4{
+    font-size: x-large;
+    margin: 0;
+    margin-top: 10px;
+}
+
+.sign-up{
+    margin-left: 60px;
+    border: solid white;
+    border-radius: 5px;
 }
